<resources>
    <string name="add_comment">Add a comment</string>
    <string name="app_name">Picstant</string>
    <string name="close">Close</string>
    <string name="comments">Comments</string>
    <string name="date">%1$s %2$s</string>
    <string name="delete_ask">Are you sure you want to delete this image?</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="edit_photo">Edit photo</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email">Email</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="image">Image</string>
    <string name="likes">Likes</string>
    <string name="num_likes">%1$d likes</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="posts">Posts</string>
    <string name="private_data">Private data</string>
    <string name="search_username">Search by username&#8230;</string>
    <string name="settings">Settings</string>
    <string name="unfollow">Unfollow</string>
    <string name="upload_image">Upload image</string>
    <string name="username">Username</string>
    <string name="view_comments">View all comments</string>
    <string name="you_liked_story">You liked %1$s\'s image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
