<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <!-- Display number of posts -->
        <TextView
            android:id="@+id/posts_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="540"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <!-- Display the word "posts" -->
        <TextView
            android:id="@+id/posts_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textSize="12sp"
            android:layout_marginTop="-8dp"
            app:layout_constraintTop_toBottomOf="@id/posts_num_tv"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <!-- Display number of followers -->
        <TextView
            android:id="@+id/followers_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintRight_toLeftOf="@+id/following_num_tv"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@id/posts_tv"
            android:layout_marginLeft="8dp"/>

        <!-- Display the word "Followers" -->
        <TextView
            android:id="@+id/followers_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="12sp"
            android:layout_marginTop="-8dp"
            app:layout_constraintTop_toBottomOf="@id/followers_num_tv"
            app:layout_constraintLeft_toRightOf="@id/posts_tv"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toLeftOf="@id/following_tv"/>

        <!-- Display number of people following -->
        <TextView
            android:id="@+id/following_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="700"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

        <!-- Display word "following" -->
        <TextView
            android:id="@+id/following_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/following_num_tv"
            android:layout_marginRight="-22dp"
            app:layout_constraintRight_toRightOf="parent"/>

        <!-- Display "Follow" button -->
        <TextView
            android:id="@+id/follow_this_profile"
            android:layout_width="156dp"
            android:layout_height="18dp"
            android:text="@string/follow"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/followers_tv"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"
            android:background="@drawable/follow_button"/>

    </android.support.constraint.ConstraintLayout>

</merge>